--- a/index.html
+++ b/index.html
@@ -1,81 +1,24 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f2f5;
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-}
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Instant Bypass Redirector</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Instant Link Bypass</h1>
+        <input type="text" id="url-input" placeholder="Вставьте ссылку (например, https://linkvertise.com/...)">
+        <button id="check-btn">Проверить ссылку</button>
+        
+        <div class="service-buttons" id="service-buttons" style="display: none;">
+            <h3>Выберите сервис для обхода:</h3>
+            <a href="#" class="service-btn" id="rip-service">Через rip.linkvertise.lol</a>
+            <a href="#" class="service-btn secondary" id="city-service">Через bypass.city</a>
+        </div>
+    </div>
 
-.container {
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    padding: 30px;
-    width: 100%;
-    max-width: 500px;
-    text-align: center;
-}
-
-h1 {
-    color: #2c3e50;
-    margin-bottom: 20px;
-    font-size: 24px;
-}
-
-input {
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 15px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 16px;
-    box-sizing: border-box;
-}
-
-button {
-    background-color: #3498db;
-    color: white;
-    border: none;
-    padding: 12px 20px;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    width: 100%;
-    margin-top: 10px;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-    background-color: #2980b9;
-}
-
-.service-buttons {
-    margin-top: 20px;
-}
-
-.service-btn {
-    display: block;
-    background-color: #2ecc71;
-    color: white;
-    padding: 12px;
-    margin: 10px 0;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: bold;
-    transition: background-color 0.3s;
-}
-
-.service-btn:hover {
-    background-color: #27ae60;
-}
-
-.service-btn.secondary {
-    background-color: #e67e22;
-}
-
-.service-btn.secondary:hover {
-    background-color: #d35400;
-}
+    <script src="script.js"></script>
+</body>
+</html>
